--- a/gestion-hotel/src/main/java/Interfaz/frmHabitacion.form
+++ b/gestion-hotel/src/main/java/Interfaz/frmHabitacion.form
@@ -3,7 +3,7 @@
   <grid id="27dc6" binding="frmHabitacion" layout-manager="GridLayoutManager" row-count="3" column-count="3" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="0" left="0" bottom="0" right="0"/>
     <constraints>
-      <xy x="20" y="20" width="1029" height="427"/>
+      <xy x="20" y="20" width="1029" height="432"/>
     </constraints>
     <properties/>
     <border type="none"/>
@@ -14,7 +14,7 @@
           <grid row="1" column="0" row-span="2" col-span="2" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties/>
-        <border type="none" title="Registro Habitaciones"/>
+        <border type="line" title="Registro Habitaciones"/>
         <children>
           <component id="9f7f6" class="javax.swing.JTextField" binding="txtidhabitacion">
             <constraints>
@@ -202,7 +202,7 @@
           <grid row="1" column="2" row-span="2" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties/>
-        <border type="none" title="Listado Habitaciones"/>
+        <border type="line" title="Listado Habitaciones"/>
         <children>
           <component id="eb2c5" class="javax.swing.JLabel">
             <constraints>
@@ -279,7 +279,7 @@
           <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <font size="12"/>
+          <font name="Inter Semi Bold" size="20" style="1"/>
           <text value="Habitación"/>
         </properties>
       </component>
